--- a/site/estilo.css
+++ b/site/estilo.css
@@ -99,6 +99,14 @@ body{
 
 }
 
+.codigo_single{
+    background-color: 272822;
+    color: f4bf75;
+    padding-right: 5px;
+    padding-left: 5px;
+   
+}
+
 #footbar{
 	margin: 5%;
 	text-align: center;
